--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <h1 class="font-light text-6xl text-center py-5 text-green-900 border-b-2 border-gray-400 max-w-[600px] m-auto font-serif whitespace-pre-wrap">THE TRAVEL BLOG</h1>
     <p class="text-center max-w-[500px] m-auto text-2xl uppercase py-5 text-gray-600 font-mono">Best Travel Blogs From Around The World To Inspire You</p>
     <section class="px-9 my-9 flex justify-center flex-wrap flex-col md:flex-row">
-        <img src="./images/meet-the-team.avif" alt="photo-1" class="object-cover h-96 w-screen md:w-7/12">
-        <div class="w-full md:w-5/12 flex justify-start flex-col items-center px-4 md:px-8">
+        <img src="./images/meet-the-team.avif" alt="photo-1" class="object-cover h-[386px] w-screen md:w-7/12">
+        <div class="w-full md:w-4/12 flex justify-start flex-col items-center px-4 md:px-8">
             <img src="./images/svg1.svg" alt="best" class=" opacity-60">
-            <p class="text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quam sunt quidem inventore ab, sint, eligendi magni accusantium fuga quod, dignissimos autem modi quaerat reiciendis maiores earum amet doloribus adipisci maxime incidunt itaque natus.</p>
+            <p class="text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quam sunt quidem inventore ab, sint, eligendi magni accusantium fuga, autem modi quaerat reiciendis maiores earum amet doloribus adipisci maxime incidunt itaque natus.</p>
             <p class="text-gray-500 font-serif mt-5">MEET THE TEAM</p>
         </div>
     </section>
