--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
                 <h1 class="text-xl md:text-5xl font-bold text-white opacity-50 text-center m-auto md:text-left max-w-[250px]">THE TRAVEL BLOG</h1>
             </div>
             <div class="grid grid-cols-3 mt-5 gap-x-5 sm:mt-0  justify-center items-start max-w-8/12">
-                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60">
+                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60 lg:px-9">
                     <h5 class="text-base sm:text-lg text-center">MORE INFO</h5>
                     <a href="#" class="my-1">SHOP</a>
                     <a href="#" class="my-1">ABOUT</a>
                     <a href="#" class="my-1">INFO</a>
                     <a href="#" class="my-1">FAQ</a>
                 </div>
-                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60">
+                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60 lg:px-9">
                     <h5 class="text-base sm:text-lg text-center">HELPFUL LINKS</h5>
                     <a href="#" class="my-1">SHOP</a>
                     <a href="#" class="my-1">ABOUT</a>
                     <a href="#" class="my-1">INFO</a>
                     <a href="#" class="my-1">FAQ</a>
                 </div>
-                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60">
+                <div class="flex flex-col justify-center items-center md:items-start text-xs sm:text-sm opacity-60 lg:px-9">
                     <h5 class="text-base sm:text-lg text-center">FIND OUT MORE</h5>
                     <a href="#" class="my-1">SHOP</a>
                     <a href="#" class="my-1">ABOUT</a>
@@ -124,4 +124,4 @@
     </footer>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 </body>
-</html>
+</html> 
